# bilouro-web

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  DEPLOY_REPORT.md  DNS_LOCAWEB.md  Dockerfile  LICENSE  README.md  SUGGESTIONS.md  WORK_REPORT.md  buildspec.yml  docker-compose.yml  manage.py  pyproject.toml
apps/autoral/: apps.py  models.py
apps/core/: context_processors.py  feeds.py  models.py  views.py  wagtail_hooks.py
apps/hashtagjesus/: apps.py  context.py  mailerlite.py  models.py  views.py  wagtail_hooks.py
apps/newsletter/: models.py
apps/shop/: apps.py  models.py
apps/studio/: apps.py  models.py  views.py  wagtail_hooks.py
apps/tech/: apps.py  models.py
config/: urls.py
config/settings/: base.py  dev.py  prod.py
infra/terraform/: .gitignore  .terraform.tfstate.lock.info  README.md  apprunner.tf  budget.tf  codebuild.tf  domains.tf  ecr.tf  iam.tf  main.tf  monitoring.tf  outputs.tf  rds.tf  s3.tf  secrets.tf  variables.tf
scripts/: cloud_build.sh  deploy.sh  lightsail_app_setup.sh  lightsail_backup.sh  lightsail_fail2ban.sh  lightsail_goaccess.sh  lightsail_nginx_https.sh  lightsail_provision.sh  lightsail_run_certbot.sh  post_deploy_setup.sh  server_deploy.sh  translate_po.py
static/css/: _base.css  autoral.css  hashtagjesus.css  shop.css  studio.css  tech.css
templates/: _base.html  _cross_nav.html  _giscus.html  _header_extras.html  search.html
templates/autoral/: about_page.html  base.html  home_page.html
templates/hashtagjesus/: _base.html  blog_index_page.html  blog_post_page.html  book_teaser_page.html  home_page.html  language_picker_page.html  legal_page.html  newsletter_thanks.html
templates/shop/: base.html  (+3 more)
(+49 files in other folders)
